# DockerDjangoProductionSetUp

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  traefik.toml
app/: Dockerfile  Dockerfile.prod  entrypoint.sh  find_deps.sh  pyproject.toml  requirements.txt
app/app/: asgi.py  celery.py  consumers.py  middleware.py  settings.py  tasks.py  urls.py
nginx/: nginx.conf
