[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ra1ze505 <87398772+Ra1ze505@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aioredis = "1.3.1"
celery = "^5.2.3"
channels = "^3.0.4"
channels-redis = "3.3.0"
daphne = "^3.0.2"
Django = "3.2.9"
djangochannelsrestframework = "0.3.0"
djangorestframework = "3.12.4"
gunicorn = "^20.1.0"
psycopg2-binary = "2.9.1"
redis = "^4.1.0"
django-silk = "^4.2.0"
PyJWT = "^2.3.0"
djangorestframework-simplejwt = "4.8.0"
djoser = "^2.1.0"
drf-spectacular = "^0.21.1"
drf-yasg = "^1.20.0"
Pillow = "8.4.0"
cryptography = "3.4.7"
django-filter = "^21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
